--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,9 +2,9 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>Title</title>
+    <title>{{ title }} - my trello</title>
 </head>
 <body>
-
+<h1>Hello, {{ user.nickname }}!</h1>
 </body>
 </html>
